--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,15 @@
 *{
   font-size:16px;
- 
   margin:0;
   padding:0;
+}
+html{
+  scroll-behavior: smooth;
+}
+
+@media only screen and  (max-width:720px){
+  *{
+    font-size:10px;
+    
+  }
 }
